Big rewrite: template ALL the things
Define macros to help setting target-specific foo_xxFLAGS variables
(substituted with AM_xxFLAGS when unset), and make the
objects/deps/compile rules generic, so only link rules will have to be
re-written.

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,8 +1,15 @@
-AM_CFLAGS = -D_AM
+AM_CPPFLAGS = -DAM_CPPFLAGS
+AM_CFLAGS   = -DAM_CFLAGS
+AM_LDFLAGS  = -DAM_LDFLAGS
+AM_LDADD    = -lm
 
-CC_TARGETS = foo bar
+CC_PROGRAMS = foo bar
+
 foo_SOURCES = foo1.c foo2.c
+
 bar_SOURCES = bar1.c bar2.c
-bar_CFLAGS = -D_BAR
+bar_CFLAGS = -DBAR
+bar_LDFLAGS = -DBAR_LDFLAGS
+bar_LDADD = -ldl
 
 include ../ezmake.mk
